# ntu-gym-tracker

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  app.py  collector.py  collector_loop.py  main.py  pyproject.toml  spec.md
.github/workflows/: scrape.yml
data/: occupancy.csv  weather.csv
ntu_gym_tracker/: __init__.py  config.py  data_access.py  db.py  hours.py  models.py  parser.py  scraper.py  storage.py  weather.py
scripts/: ntu-gym-collector.service  run_collector.sh
static/: style.css
templates/: base.html  index.html
templates/partials/: current.html
