[project]
name = "ntu-gym-tracker"
version = "0.2.0"
description = "Collect, visualize, and (soon) forecast occupancy of NTU's gym and pool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pandas>=3.0.3",
    "tzdata>=2026.2",
    "uvicorn[standard]>=0.49.0",
]
